changed files by pdets auto publish service, publishid[cb159f85-378d-41ef-8f92-0d8d4bd4f821] and do [publish].

--- a/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/8-implement-conditional-access-policies.yml
+++ b/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/8-implement-conditional-access-policies.yml
@@ -6,10 +6,12 @@ metadata:
   description: "implement-conditional-access-policies"
   ms.date: 04/24/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
-durationInMinutes: 3
+durationInMinutes: 7
 content: |
   [!include[](includes/8-implement-conditional-access-policies.md)]
 quiz:
