--- a/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/7-implement-entitlement-packages-azure-ad-identity-governance.yml
+++ b/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/7-implement-entitlement-packages-azure-ad-identity-governance.yml
@@ -6,9 +6,11 @@ metadata:
   description: "Implement entitlement packages in Azure AD Identity Governance"
   ms.date: 04/24/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
-durationInMinutes: 3
+durationInMinutes: 8
 content: |
   [!include[](includes/7-implement-entitlement-packages-azure-ad-identity-governance.md)]
