--- a/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/8-implement-conditional-access-policies.yml
+++ b/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/8-implement-conditional-access-policies.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.manage-secure-user-access-microsoft-365.implement-conditional-access-policies
-title: implement-conditional-access-policies
+title: Implement Conditional Access policies
 metadata:
-  title: implement-conditional-access-policies
-  description: "implement-conditional-access-policies"
+  title: Implement Conditional Access policies
+  description: "Implement Conditional Access policies"
   ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
