--- a/learn-m365-pr/wwl/configure-organizational-settings/4-deploy-microsoft-365-add-ins.yml
+++ b/learn-m365-pr/wwl/configure-organizational-settings/4-deploy-microsoft-365-add-ins.yml
@@ -4,7 +4,7 @@ title: Deploy Microsoft 365 add-ins
 metadata:
   title: Deploy Microsoft 365 add-ins
   description: "Deploy Microsoft 365 add-ins"
-  ms.date: 03/09/2022
+  ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Holly must manually roll out updates to the app"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't a feature of the Deploy from AppSource option. Try again."
+      explanation: "That's incorrect. This item isn't a feature of the Deploy from AppSource option."
     - content: "When the app starts, it automatically downloads for the user"
       isCorrect: false
-      explanation: "That's incorrect. This feature is standard functionality when deploying integrated apps. It has no bearing on the Deploy from AppSource option. Try again."
+      explanation: "That's incorrect. This feature is standard functionality when deploying integrated apps. It has no bearing on the Deploy from AppSource option."
     - content: "Enhancements to the app will automatically be made available to users without Holly's intervention"
       isCorrect: true
       explanation: "That's correct. With the AppSource option, updates and enhancements to the app will automatically be made available to users without Holly's intervention."
