--- a/learn-m365-pr/wwl/configure-organizational-sharing/index.yml
+++ b/learn-m365-pr/wwl/configure-organizational-sharing/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.configure-organizational-sharing
 metadata:
   title: Configure organizational sharing
   description: "Configure organizational sharing"
-  ms.date: 03/09/2022
+  ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -28,6 +28,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.configure-organizational-sharing.introduction
 - learn.wwl.configure-organizational-sharing.examine-exchange-federated-delegation-features
