changed files by pdets auto publish service, publishid[0dbcb9b4-25de-42ba-afca-e96020396249] and do [publish].

--- a/learn-m365-pr/wwl/exchange-setup-using-role-based-permissions/4-explore-differences-permissions.yml
+++ b/learn-m365-pr/wwl/exchange-setup-using-role-based-permissions/4-explore-differences-permissions.yml
@@ -4,7 +4,7 @@ title: Explore the differences in permissions
 metadata:
   title: Explore the differences in permissions
   description: "Explore the differences in permissions"
-  ms.date: 03/09/2022
+  ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Create a role group, which will contain the Active Directory administrators that can create security principals"
       isCorrect: false
-      explanation: "That's incorrect. This item is one of the tasks that must be completed, but it's not the first task. Try again."
+      explanation: "That's incorrect. This item is one of the tasks that must be completed, but it's not the first task."
     - content: "Disable Active Directory split permissions if it's enabled"
       isCorrect: true
       explanation: "That's correct. The first task that an organization must complete to configure RBAC split permissions is to disable Active Directory split permissions if it's enabled."
     - content: "Create regular and delegating role assignments between the Mail Recipient Creation role and the Recipient Management role group"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't one of the tasks that must be completed. Try again."
+      explanation: "That's incorrect. This item isn't one of the tasks that must be completed."
