--- a/learn-m365-pr/wwl/exchange-setup-using-role-based-permissions/5-knowledge-check.yml
+++ b/learn-m365-pr/wwl/exchange-setup-using-role-based-permissions/5-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "A Resource forest"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the correct type of Exchange forest in which RBAC applies permissions to all Exchange objects. Try again."
+      explanation: "That's incorrect. This item isn't the correct type of Exchange forest in which RBAC applies permissions to all Exchange objects."
     - content: "All forests in the same forest topology type"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the correct type of Exchange forest in which RBAC applies permissions to all Exchange objects. Try again."
+      explanation: "That's incorrect. This item isn't the correct type of Exchange forest in which RBAC applies permissions to all Exchange objects."
     - content: "A single forest"
       isCorrect: true
       explanation: "That's correct. RBAC applies permissions to all Exchange objects within a single forest. The RBAC configuration in each forest is configured independently of all other forests."
@@ -32,13 +32,13 @@ quiz:
     choices:
     - content: "Security forest"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't one of the multiple forest topologies supported by Microsoft Exchange Server. Try again."
+      explanation: "That's incorrect. This item isn't one of the multiple forest topologies supported by Microsoft Exchange Server."
     - content: "Cross forest"
       isCorrect: true
       explanation: "That's correct. Microsoft Exchange Server supports Cross-forest and Resource forest topologies. A cross-forest topology type can have multiple forests, each with their own installation of Exchange. A resource forest topology type has an Exchange forest and one or more accounts forests."
     - content: "Active Directory forest"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't one of the multiple forest topologies supported by Microsoft Exchange Server. Try again."
+      explanation: "That's incorrect. This item isn't one of the multiple forest topologies supported by Microsoft Exchange Server."
   - content: "As the Messaging admin for Fabrikam, Holly Spencer wants to create a mailbox for Patti Fernandez. The mailbox will have Active Directory split permissions enabled. Holly began by creating a user account for Patti using Active Directory tools. What's the next step that Holly must complete?"
     choices:
     - content: "Use the Exchange management tools to mailbox enable Patti's account"
@@ -46,7 +46,7 @@ quiz:
       explanation: "That's correct. After creating Patti's user account using Active Directory tools, Holly must use the Exchange management tools to mailbox enable Patti's account."
     - content: "Configure Exchange permissions on Patti's account"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the next step that Holly must complete. Try again."
+      explanation: "That's incorrect. This item isn't the next step that Holly must complete."
     - content: "Add Patti's account to the Mail Recipient role"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the next step that Holly must complete. Try again."
+      explanation: "That's incorrect. This item isn't the next step that Holly must complete."
