--- a/learn-m365-pr/wwl/exchange-setup-using-role-based-permissions/2-explore-split-permissions.yml
+++ b/learn-m365-pr/wwl/exchange-setup-using-role-based-permissions/2-explore-split-permissions.yml
@@ -4,7 +4,7 @@ title: Explore the use of split permissions
 metadata:
   title: Explore the use of split permissions
   description: "Explore the use of split permissions"
-  ms.date: 03/09/2022
+  ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "The separation of Exchange management and Compliance management"
       isCorrect: false
-      explanation: "That's incorrect. This item is the highest level of split permissions. Try again."
+      explanation: "That's incorrect. This item is the highest level of split permissions."
     - content: "The separation of Active Directory management and Azure Active Directory management"
       isCorrect: false
-      explanation: "That's incorrect. This item is the highest level of split permissions. Try again."
+      explanation: "That's incorrect. This item is the highest level of split permissions."
     - content: "The separation of Exchange management and Active Directory management"
       isCorrect: true
       explanation: "That's correct. The highest level of split permissions is the separation of Exchange management and Active Directory management."
