--- a/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/index.yml
+++ b/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.explore-threat-protection-microsoft-365-defender
 metadata:
   title: Explore threat protection in Microsoft 365 Defender
   description: "Explore threat protection in Microsoft 365 Defender"
-  ms.date: 03/09/2022
+  ms.date: 04/25/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -17,6 +17,8 @@ abstract: |
   - Describe the protection provided by Safe Attachment and Safe Links policies.
   - Understand the spoof intelligence features provided by Exchange Online Protection.
   - Describe how Microsoft Defender anti-phishing policies work.
+  - Understand the process to manage the tenant allow/block list in Microsoft 365 Defender.
+  - Understand how Advanced Hunting can be used to track events in your secure messaging environment.
 prerequisites: ""
 iconUrl: /learn/achievements/m365-defender-threat-protection.svg
 levels:
@@ -28,6 +30,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.explore-threat-protection-microsoft-365-defender.introduction
 - learn.wwl.explore-threat-protection-microsoft-365-defender.examine-threat-protection
@@ -36,6 +39,8 @@ units:
 - learn.wwl.explore-threat-protection-microsoft-365-defender.examine-how-safe-links-protects-against-malicious-urls
 - learn.wwl.explore-threat-protection-microsoft-365-defender.manage-spoof-intelligence
 - learn.wwl.explore-threat-protection-microsoft-365-defender.manage-anti-phishing-policies
+- learn.wwl.explore-threat-protection-microsoft-365-defender.manage-the-tenant-allow-and-block-list-in-microsoft-365-defender
+- learn.wwl.explore-threat-protection-microsoft-365-defender.examine-advanced-hunting-in-microsoft-365-defender
 - learn.wwl.explore-threat-protection-microsoft-365-defender.knowledge-check
 - learn.wwl.explore-threat-protection-microsoft-365-defender.summary
 badge:
