changed files by pdets auto publish service, publishid[ed3fe58c-c3eb-436f-8953-3a74e7eeec9b] and do [publish].

--- a/learn-m365-pr/wwl/what-is-m365/1-introduction.yml
+++ b/learn-m365-pr/wwl/what-is-m365/1-introduction.yml
@@ -1,15 +1,16 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.2-whats-in-m365
+uid: learn-m365.what-is-m365.introduction
 title: Introduction
 metadata:
   title: Introduction
   description: "Introduction"
-  ms.date: 02/16/2021
+  ms.date: 04/25/2022
   author: wwlpublish
-  ms.author: dahans
+  ms.author: asglenno
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
-durationInMinutes: 1
+labModal: false
+durationInMinutes: 4
 content: |
   [!include[](includes/1-introduction.md)]
