--- a/learn-m365-pr/wwl/what-is-m365/8-summary-resources.yml
+++ b/learn-m365-pr/wwl/what-is-m365/8-summary-resources.yml
@@ -1,15 +1,16 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.what-is-m365.summary-resource
+uid: learn-m365.what-is-m365.summary-resources
 title: Summary and resources
 metadata:
   title: Summary and resources
   description: "Summary and resources"
-  ms.date: 02/16/2021
+  ms.date: 04/25/2022
   author: wwlpublish
-  ms.author: dahans
+  ms.author: asglenno
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 1
 content: |
-  [!include[](includes/5-summary-resources.md)]
+  [!include[](includes/8-summary-resources.md)]
