--- a/learn-m365-pr/wwl/what-is-m365/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/what-is-m365/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 04/25/2022
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: asglenno
   ms.topic: interactive-tutorial
@@ -41,15 +41,15 @@ quiz:
       explanation: "Incorrect. A sales associate is considered a frontline worker. A frontline worker is defined as those individuals that are in service or task-oriented roles. They are the first to engage customers, the first to see products and services in action, and the first to represent your brand."
   - content: "What is Microsoft 365?"
     choices:
-    - content: "A cloud-based subscription service consisting of intelligent cloud services, innovative Office apps, collaboration tools like Teams, Windows client and world-class security."
+    - content: "A cloud-based subscription service that consists of an integrated portfolio of products like Office apps, Teams, Windows, world-class security, and more."
       isCorrect: true
-      explanation: "Correct. Microsoft 365 is a cloud-based subscription service consisting of intelligent cloud services, innovative Office apps, collaboration tools like Teams, Windows client and world-class security."
+      explanation: "Correct. Microsoft 365 is a cloud-based subscription service that consists of an integrated portfolio of products like Office apps, Teams, Windows, world-class security, and more."
     - content: "A subscription service for organizations that allows you to create and run PCs remotely."
       isCorrect: false
-      explanation: "Incorrect. This subscription is referring to Windows 365. Microsoft 365 is a cloud-based subscription service consisting of intelligent cloud services, innovative Office apps, collaboration tools like Teams, Windows client and world-class security."
+      explanation: "Incorrect. This subscription is referring to Windows 365. Microsoft 365 is a cloud-based subscription service that consists of an integrated portfolio of products like Office apps, Teams, Windows, world-class security, and more."
     - content: "A one-time purchase for innovative Office apps to install on one computer."
       isCorrect: false
-      explanation: "Incorrect. This one-time purchase is for Office 2021. Microsoft 365 is cloud-based subscription service consisting of intelligent cloud services, innovative Office apps, collaboration tools like Teams, Windows client and world-class security."
+      explanation: "Incorrect. This one-time purchase is for Office 2021. Microsoft 365 is a cloud-based subscription service that consists of an integrated portfolio of products like Office apps, Teams, Windows, world-class security, and more."
   - content: "Which of the following Microsoft 365 subscriptions is designed for large organizations?"
     choices:
     - content: "Microsoft 365 Enterprise"
