--- a/learn-m365-pr/wwl/describe-collaboration-solutions-microsoft-365/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/describe-collaboration-solutions-microsoft-365/6-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 04/25/2022
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: asglenno
   ms.topic: interactive-tutorial
@@ -49,7 +49,7 @@ quiz:
       explanation: "Incorrect. Yammer allows you to connect with others across your company. It's not suitable for sharing files with people outside of your organization."
     - content: "OneDrive"
       isCorrect: true
-      explanation: "Correct. You can password protect files and share files with people inside and outside your organization."
+      explanation: "Correct. You can share files with people inside and outside your organization."
   - content: "Which three types of sites can you create in SharePoint to foster communication and collaboration across your team and organization?"
     choices:
     - content: "Team sites, Channel sites, and Hub sites"
