--- a/learn-m365-pr/wwl/troubleshoot-federation-issues/2-troubleshoot-issues-interoperating.yml
+++ b/learn-m365-pr/wwl/troubleshoot-federation-issues/2-troubleshoot-issues-interoperating.yml
@@ -4,12 +4,13 @@ title: Troubleshoot issues interoperating with Skype for Business
 metadata:
   title: Troubleshoot issues interoperating with Skype for Business
   description: "Troubleshoot issues interoperating with Skype for Business"
-  ms.date: 08/31/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 10
 content: |
   [!include[](includes/2-troubleshoot-issues-interoperating.md)]
