--- a/learn-m365-pr/wwl/troubleshoot-federation-issues/3-troubleshoot-federation-issues.yml
+++ b/learn-m365-pr/wwl/troubleshoot-federation-issues/3-troubleshoot-federation-issues.yml
@@ -4,12 +4,13 @@ title: Troubleshoot Teams federation issues
 metadata:
   title: Troubleshoot Teams federation issues
   description: "Troubleshoot Teams federation issues"
-  ms.date: 08/31/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 4
 content: |
   [!include[](includes/3-troubleshoot-federation-issues.md)]
