changed files by pdets auto publish service, publishid[cb0454bd-2976-403f-9b0a-2cd4cb8128d6] and do [publish].

--- a/learn-m365-pr/wwl/troubleshoot-apps-channels/2-troubleshoot-issues-apps.yml
+++ b/learn-m365-pr/wwl/troubleshoot-apps-channels/2-troubleshoot-issues-apps.yml
@@ -4,12 +4,13 @@ title: Troubleshoot issues with apps
 metadata:
   title: Troubleshoot issues with apps
   description: "Troubleshoot issues with apps"
-  ms.date: 08/24/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 6
 content: |
   [!include[](includes/2-troubleshoot-issues-apps.md)]
