--- a/learn-m365-pr/wwl/troubleshoot-apps-channels/4-knowledge-check.yml
+++ b/learn-m365-pr/wwl/troubleshoot-apps-channels/4-knowledge-check.yml
@@ -4,12 +4,13 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 08/24/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 5
 content: |
   [!include[](includes/4-knowledge-check.md)]
