--- a/learn-m365-pr/wwl/troubleshoot-file-sharing/3-issues-for-private-channels.yml
+++ b/learn-m365-pr/wwl/troubleshoot-file-sharing/3-issues-for-private-channels.yml
@@ -4,12 +4,13 @@ title: Troubleshoot file issues for private channels
 metadata:
   title: Troubleshoot file issues for private channels
   description: "Troubleshoot file issues for private channels"
-  ms.date: 08/24/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/3-issues-for-private-channels.md)]
