--- a/learn-m365-pr/wwl/troubleshoot-file-sharing/4-issues-for-public-channels.yml
+++ b/learn-m365-pr/wwl/troubleshoot-file-sharing/4-issues-for-public-channels.yml
@@ -4,12 +4,13 @@ title: Troubleshoot file issues for public channels
 metadata:
   title: Troubleshoot file issues for public channels
   description: "Troubleshoot file issues for public channels"
-  ms.date: 08/24/2021
+  ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/4-issues-for-public-channels.md)]
