--- a/learn-m365-pr/wwl/troubleshoot-file-sharing/5-knowledge-check.yml
+++ b/learn-m365-pr/wwl/troubleshoot-file-sharing/5-knowledge-check.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.troubleshoot-file-sharing.knowledge-check
-title: Knowledge Check
+title: Knowledge check
 metadata:
-  title: Knowledge Check
-  description: "Knowledge Check"
+  title: Knowledge check
+  description: "Knowledge check"
   ms.date: 04/26/2022
   author: wwlpublish
   ms.author: cyncarey
