changed files by pdets auto publish service, publishid[4e6ddc74-44a0-4f05-98f8-6993e701c050] and do [publish].

--- a/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/10-knowledge-check.yml
+++ b/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/10-knowledge-check.yml
@@ -32,7 +32,7 @@ quiz:
     choices:
     - content: "Verify Fabrikam has Microsoft Defender for Office 365 licensed"
       isCorrect: true
-      explanation: "That's correct. Before implementing Safe Links, Holly should verify that Fabrikam has Microsoft Defender for Office 365 licensed."
+      explanation: "That's correct. Holly should verify that Fabrikam has Microsoft Defender for Office 365 licensed Before implementing Safe Links."
     - content: "Verify that a default policy is in place that applies to selected domains"
       isCorrect: false
       explanation: "That's incorrect. A default policy should be in place that applies to everyone."
