changed files by pdets auto publish service, publishid[fb121b3e-e9cd-4881-849e-c23fe8052a09] and do [publish].

--- a/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/8-manage-tenant-allow-block-list.yml
+++ b/learn-m365-pr/wwl/explore-threat-protection-microsoft-365-defender/8-manage-tenant-allow-block-list.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.explore-threat-protection-microsoft-365-defender.manage-the-tenant-allow-and-block-list-in-microsoft-365-defender
-title: Manage the tenant allow and block list in Microsoft 365 Defender
+title: Manage the Tenant Allow/Block list in Microsoft 365 Defender
 metadata:
-  title: Manage the tenant allow and block list in Microsoft 365 Defender
-  description: "Manage the tenant allow and block list in Microsoft 365 Defender"
+  title: Manage the Tenant Allow/Block list in Microsoft 365 Defender
+  description: "Manage the Tenant Allow/Block list in Microsoft 365 Defender"
   ms.date: 04/26/2022
   author: wwlpublish
   ms.author: maquinl
